--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,12 @@
 language: ruby
 rvm:
+  - 2.5
+  - 2.4
+  - 2.3
   - 2.2
-  - jruby
-  - 2.0.0-p247
+  - 2.1
+before_install:
+  - gem update --system
+  - gem --version
 install: gem install rails && bundle install
 script: bin/test
